--- a/roles/kubernetes/templates/cluster.yml.j2
+++ b/roles/kubernetes/templates/cluster.yml.j2
@@ -131,7 +131,7 @@ system_images:
   coredns: rancher/mirrored-coredns-coredns:1.9.4
   coredns_autoscaler: rancher/mirrored-cluster-proportional-autoscaler:1.8.6
   nodelocal: rancher/mirrored-k8s-dns-node-cache:1.22.20
-  kubernetes: rancher/hyperkube:v1.26.6-rancher1
+  kubernetes: rancher/hyperkube:v1.24.15-rancher1
   flannel: rancher/mirrored-flannel-flannel:v0.21.4
   flannel_cni: rancher/flannel-cni:v0.3.0-rancher8
   calico_node: rancher/mirrored-calico-node:v3.25.0
@@ -168,7 +168,7 @@ authorization:
   options: {}
 ignore_docker_version: null
 enable_cri_dockerd: null
-kubernetes_version: ""
+kubernetes_version: "v1.24.15"
 private_registries: []
 ingress:
   provider: none
